[gd_scene load_steps=3 format=3 uid="uid://dbedkj40f785x"]

[ext_resource type="Script" path="res://ui/building_panel.gd" id="1_von7c"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_p6j6j"]
size = Vector2(32, 32)

[node name="BuildingPanel" type="PanelContainer"]
script = ExtResource("1_von7c")

[node name="MarginContainer2" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer2"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer2/VBoxContainer"]
layout_mode = 2

[node name="Name" type="Label" parent="MarginContainer2/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 2.08165e-12)
layout_mode = 2
text = "Wino Mamrot"
autowrap_mode = 2

[node name="BuildingIcon" type="TextureRect" parent="MarginContainer2/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
texture = SubResource("PlaceholderTexture2D_p6j6j")

[node name="InventoryText" type="Label" parent="MarginContainer2/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Stan: 5/10 sztuk"

[node name="HBoxContainer" type="VBoxContainer" parent="MarginContainer2/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="RefillBuildingButton" type="Button" parent="MarginContainer2/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Uzupełnij (-100 Żabsów)"

[node name="DeleteBuildingButton" type="Button" parent="MarginContainer2/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Sprzedaj (+100 Żabsów)"
